IaC/4-fis-experiment/k8s/base/02-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dojangkok
  labels:
    app.kubernetes.io/name: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
